--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,18 @@
 body {
   font-family: Arial, sans-serif;
+  text-align: center;
 }
+
+/* Current variable axes configuration to icons */
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 48;
+  font-size: inherit;
+  line-height: inherit;
+  vertical-align: bottom;
+}
+
 
